# MikeStone2

./: README.md  details.txt  log.txt
MILESTONE2 code/: Algorithms.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  FileCacheManager.cpp  FileCacheManager.h  MatrixBuilder.cpp  MatrixBuilder.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PairsMatrix.cpp  PairsMatrix.h  README.md  SearchSolverOA.h  Searchable.h  Searcher.h  SearcherInterface.h  Server.h  Solver.h  State.h  StatesMatrix.h  StringReverser.cpp  StringReverser.h  main.cpp
Random matrixes/: auto_client.py  matrix10.txt  matrix15.txt  matrix18.txt  matrix22.txt  matrix26.txt  matrix30.txt  matrix34.txt  matrix38.txt  matrix42.txt  matrix46.txt  matrix50.txt
matrixmaker Program in c/: CMakeLists.txt  main.c
